--- a/main.html
+++ b/main.html
@@ -12,5 +12,11 @@
 </script>
 
 </body>
-
+	<div class="card">
+        <img src="https://images.pexels.com/photos/207962/pexels-photo-207962.jpeg" alt="img">
+        <h1>Pricing Card</h1>
+        <p>Price: Rs.200</p>
+        <p>Description: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button>Buy Now</button>
+    </div>
 </html>
